# setlist_list

./: .dockerignore  .env  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  TODO.txt  build.rs  fly.toml  package-lock.json  package.json  tailwind.config.js  webpack.config.js
.github/workflows/: bundle.yml  ci.yaml  devskim.yml  fly-deploy.yml  webpack.yml
.sqlx/: query-006e04eabe0541f69743f8a57f0b7d3e737a046e19ef9b986e4b0387ec4d4b0b.json  query-010a5f922d8f2698daf51e086f6c4ab0ca2d83ce30d34f8252ad986e11618c58.json  query-01d421ca47e9284f01a8f7e11d4c2946db7ed3fc1bca0678078fc6999c7589f4.json  query-02d206982e2ec6b8379c4bc7e653016d73fac3cede56c86626ababe3142828b2.json  query-0ef3fd1508d7633543d11ec2a2f6e2501f8f1fd91eb0ff7dafe4f0f1c23c37b3.json  query-25beea43d0e9e4baaac0675c42bff1cc7dad5b5f4b22f7c7348cd1e2cf6ce72b.json  query-286fa430bbb0b72544c85d648d8d1ab67e8f2e678ea62d2ba15977b2ce24047a.json  query-3515a6e8f4f9416061a75cb94446b9198883a87f12c408092298cc4c33d66784.json  query-3830182f80b4be629a119a71467878cbde87f7bba507ec644257eff94405e709.json  query-3b4fbbd2f09be3773e2eafe43fa524b1e83cfd0eaa67abdae42d057f77459523.json  query-3de97715e365d01c894dd7e05cfa6f7435d7dcf2cecb4ee9ba01e2fd1cffc479.json  query-3f7fc6c381c743967ce4a8595e00bf9ef2f354f255ca9509bd554241eebf48a3.json  query-43846ada62a728251befb5b00ba43893d92e06baf6ed8fbf20f2bf58da8a4705.json  query-4c1de95cd5051bb191387c7854e5d6bc14b496db54dbea4e9144fca5f5eb3d29.json  query-517d0ef7715ff10c4aa8f1365352ecd5f1c92555f1670279b186e4a18605192b.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-6b720b525e85e6e97adf59facbc1b8fae284139301423017d5da0af800a8a526.json  query-7287ca3d03b460d4dae3dad37d84ccc071ed2e073086d21a4b6b0f3631de0b90.json  query-7873f50d1a9b14450b855ba3c9ce7539007c320c98823816763d6a2f2aedb97f.json  query-7b26e04ae6c14c26fb2f7f4617b7656170f16c3394a70b8e8c79bca3cc77e6ce.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-90ef1b2890a6ee6bf3d46f75f5c4b287e433b8c9e883a8fef9c069c28d0dc55a.json  query-93960465bbf8f670891d49b95fc52257c0ef596eee2d9a0e6a7d0aad03de4421.json  query-a249d9a9ec8dff1416b8e00a6e2b264194c0ea568939a90e332b793804eaa809.json  query-a4dcc70fa0b8688e694ddcbaffa136ae305bb592f016ec38d6c20081f3a975f4.json  query-acebbfcb0eabcf63ce5e1e2b436c2127044b47261577ff91d27133f539befbf5.json  query-afd5a638f4aacfc54a69522dd2c3332a5bf960babe656ce848734b0bcd3b6441.json  query-b27afa9a8f94cda4bb7ac1dc390950d3e349414709e158fd4e43e9ebd7d673b4.json  query-bdf5a51d25948d6d2f8250db76aa95d0fff8de82d7769a419b02437c88635951.json  query-c20887f5dc77ed4ef41177b9e21c17edee4a22e4369d6cddd539b3c648fc7b17.json  query-c6acdf15d871df837814eab8aa9cad2902968fba60f3e4d48f59df018c8db651.json  query-c9fb32dc3a2379912b00b2250eca12383da08e9935c59bdbd30261973fa82054.json  query-d19bfc268d832a6ab7e0f65f84a5aae27873702dba85d3c7a43d44a582d8c33e.json  query-d61fb7c9f946af94a55cf91738c57d0ce61b8077d09526268fee39ad6d250a75.json  query-d73d9955da6a3f9c9f2fecbe8a7e18844c8093e5e6b8adce8627d03ad3f473bf.json  query-d9cfdda0e0838945d19273cfc9f028993e2bbb418e8d76e90a42a04ea674ec2f.json  query-ea0e67e315d9c82906e5da216b1d5b7dc342448ddec49be66075318b69cda08e.json  query-eb292acd597392abc6ea2b154f02554baffea596c0609e3c0fb5b12c9653dbe1.json  query-f1d263f903104880378a9c2bc9a4e6dacd233a55aa7238c68aec642baa942d01.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json  (+3 more)
assets/: bun.lockb  package-lock.json  package.json  prettier.config.js  tailwind.config.js  webpack.config.js
assets/src/: index.js  main.js
assets/static/: 404.html
assets/static/styles/: output.css
assets/views/: 404.html  index.html  index_body.html  layout.html  login.html  registration_success.html  unauthorized.html
assets/views/sets/: create.html  (+3 more)
config/: development.yaml  production.yaml  test.yaml
examples/: playground.rs
loco/: Cargo.toml  README.md
loco/loco-extras/: Cargo.toml
loco/loco-extras/src/initializers/: mod.rs
loco/macros/src/: lib.rs
loco/macros/tests/: attr_macro.rs
loco/src/: app.rs  banner.rs  boot.rs  cli.rs  config.rs  db.rs  environment.rs  errors.rs  hash.rs  lib.rs  logger.rs  prelude.rs  redis.rs  template.rs  testing.rs  utils.rs  validation.rs  worker.rs
loco/src/auth/: jwt.rs
loco/src/auth/snapshots/: loco_rs__auth__jwt__tests__valid token and custom claims.snap  loco_rs__auth__jwt__tests__valid token.snap
loco/src/controller/: app_routes.rs  health.rs  mod.rs  routes.rs  views.rs
loco/src/controller/middleware/: auth.rs  etag.rs  format.rs  mod.rs
loco/src/controller/middleware/_archive/: content_etag.rs
loco/src/mailer/: email_sender.rs  mod.rs  template.rs
loco/src/mailer/snapshots/: loco_rs__mailer__template__tests__can_render_template.snap
loco/src/model/: mod.rs
loco/src/snapshots/: loco_rs__auth__tests__valid token.snap  loco_rs__validation__tests__struct-[foo-bar].snap  loco_rs__validation__tests__struct-[foo].snap
loco/src/storage/: mod.rs
loco/src/storage/drivers/: local.rs
loco/src/tests_cfg/: mod.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_users.rs  m20240722_164257_sets.rs
migrations/: 20240726172205_users.up.sql  20240726173817_sets.up.sql  20240813113834_setlist_songs.down.sql  20240813113834_setlist_songs.up.sql
seeds/: users.sql
src/: app.rs  boot.rs  cli.rs  config.rs  db.rs  lib.rs  prelude.rs  utils.rs  validation.rs
src/controller/: mod.rs
src/controllers/: auth.rs  auth_api.rs  hello.rs  index.rs  mod.rs  sets.rs  tictactoe.rs  user.rs
src/fixtures/: users.yaml
src/initializers/: minijinja_view_engine.rs  mod.rs  view_engine.rs
src/mailers/: auth.rs
src/models/: index.rs  mod.rs  sets.rs  songs.rs  users.rs
src/tasks/: seed.rs
src/views/: auth.rs  auth_api.rs  index.rs  mod.rs  not_found.rs  sets.rs  user.rs
templates/: index.html  tailwind.config.js
tests/: mod.rs  utils.rs
tests/models/: mod.rs  sets.rs  users.rs
tests/requests/: auth.rs  hello.rs  mod.rs  prepare_data.rs  tictactoe.rs  user.rs
tests/tasks/: seed.rs
(+23 files in other folders)
