[workspace]

[package]
name = "setlist_list"
version = "0.1.0"
edition = "2021"

[dependencies]
loco-rs = { version = "0.6.1" }
migration = { path = "migration" }

axum = "0.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6.12"
tokio = { version = "1.33.0", default-features = false }
async-trait = "0.1.74"
tracing = "0.1.40"
chrono = "0.4"
validator = { version = "0.16.1" }
sea-orm = { version = "1.0.0-rc.7", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
uuid = { version = "1.6.0", features = ["v4"] }
include_dir = "0.7"

cookie = "0.18.1"
minijinja = { version = "2.0.3", features = ["loader", "speedups"] }
minijinja-autoreload = "2.0.3"
rand = "0.8.5"
time = "0.3.36"

[[bin]]
name = "setlist_list-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
serial_test = "3.1.1"
rstest = "0.21.0"
loco-rs = { version = "0.6.1", features = ["testing"] }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
