[workspace]
members = ["loco/macros", "loco/loco-extras"]

[workspace.package]
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0"

[package]
name = "setlist_list"
version = "0.1.0"
edition = "2021"

[dependencies]
loco-rs = { path = "loco", version = "0.6.1" }

axum = "0.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6.12"
tokio = { version = "1.39.2", features = ["full"] }
async-trait = "0.1.74"
tracing = "0.1.40"
chrono = { version = "0.4", features = ["serde"] }
validator = "0.16.1"
uuid = { version = "1.6.0", features = ["v4", "v7", "serde"] }
include_dir = "0.7"

cookie = "0.18.1"
minijinja = { version = "2.0.3", features = ["loader", "speedups"] }
minijinja-autoreload = "2.0.3"
rand = "0.8.5"
time = "0.3.36"
axum-htmx = "0.6.0"
sqlx = { version = "0.8.0", default-features = false, features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "uuid",
  "migrate",
  "json",
  "chrono",
] }
serde_yaml = "0.9.34"
tracing-subscriber = "0.3.18"

[[bin]]
name = "setlist_list-cli"
path = "src/bin/main.rs"
required-features = []

[workspace.dependencies]
async-trait = "0.1.74"
axum = { version = "0.7.5", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5.0", features = [
  "trace",
  "catch-panic",
  "timeout",
  "add-extension",
  "cors",
  "fs",
  "set-header",
  "compression-full",
] }

[dev-dependencies]
loco-rs = { path = "loco", version = "0.6.1", features = ["testing"] }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
